--- a/templates/main/include/header.html
+++ b/templates/main/include/header.html
@@ -4,7 +4,7 @@
         <!-- Classy Menu -->
         <nav class="classy-navbar" id="essenceNav">
             <!-- Logo -->
-            <a class="nav-brand" href="{% url 'home' %}"><img src="{% static 'product/img/core-img/logo.png' %}" alt=""></a>
+            <a class="nav-brand" href="#"><img src="{% static 'main/img/core-img/logo.png' %}" alt=""></a>
             <!-- Navbar Toggler -->
             <div class="classy-navbar-toggler">
                 <span class="navbarToggler"><span></span><span></span><span></span></span>
