--- a/templates/products/index.html
+++ b/templates/products/index.html
@@ -1,4 +1,4 @@
 {% extends 'base.html' %}
 {% block header %}
-    {% include 'product/include/header.html' %}
+    {% include 'products/../main/include/header.html' %}
 {% endblock %}
