--- a/templates/main/include/header.html
+++ b/templates/main/include/header.html
@@ -1,16 +1,18 @@
 {% load static %}
+{% load category_tags %}
+{% load mptt_tags %}
 <header class="header_area">
-    <div class="classy-nav-container breakpoint-off d-flex align-items-center justify-content-between">
+    <div class="classy-nav-container d-flex align-items-center justify-content-between light left breakpoint-off">
         <!-- Classy Menu -->
         <nav class="classy-navbar" id="essenceNav">
             <!-- Logo -->
             <a class="nav-brand" href="#"><img src="{% static 'main/img/core-img/logo.png' %}" alt=""></a>
             <!-- Navbar Toggler -->
             <div class="classy-navbar-toggler">
-                <span class="navbarToggler"><span></span><span></span><span></span></span>
+                <span class="navbarToggler active"><span></span><span></span><span></span></span>
             </div>
             <!-- Menu -->
-            <div class="classy-menu">
+            <div class="classy-menu menu-on">
                 <!-- close btn -->
                 <div class="classycloseIcon">
                     <div class="cross-wrap"><span class="top"></span><span class="bottom"></span></div>
@@ -18,38 +20,26 @@
                 <!-- Nav Start -->
                 <div class="classynav">
                     <ul>
-                        <li><a href="#">Shop</a>
-                            <div class="megamenu">
-                                <ul class="single-mega cn-col-4">
-                                    <li class="title">Women's Collection</li>
-                                    <li><a href="shop.html">Dresses</a></li>
-                                    <li><a href="shop.html">Blouses &amp; Shirts</a></li>
-                                    <li><a href="shop.html">T-shirts</a></li>
-                                    <li><a href="shop.html">Rompers</a></li>
-                                    <li><a href="shop.html">Bras &amp; Panties</a></li>
-                                </ul>
-                                <ul class="single-mega cn-col-4">
-                                    <li class="title">Men's Collection</li>
-                                    <li><a href="shop.html">T-Shirts</a></li>
-                                    <li><a href="shop.html">Polo</a></li>
-                                    <li><a href="shop.html">Shirts</a></li>
-                                    <li><a href="shop.html">Jackets</a></li>
-                                    <li><a href="shop.html">Trench</a></li>
-                                </ul>
-                                <ul class="single-mega cn-col-4">
-                                    <li class="title">Kid's Collection</li>
-                                    <li><a href="shop.html">Dresses</a></li>
-                                    <li><a href="shop.html">Shirts</a></li>
-                                    <li><a href="shop.html">T-shirts</a></li>
-                                    <li><a href="shop.html">Jackets</a></li>
-                                    <li><a href="shop.html">Trench</a></li>
-                                </ul>
+                        <li class="megamenu-item active"><a href="#">Shop</a>
+                            <div class="megamenu" style="display: block;">
+                                {% get_categories as categories %}
+                                {% recursetree categories %}
+                                    <ul class="single-mega cn-col-4">
+
+                                        <li class="title">{{ node.title }}</li>
+                                        {% if not node.is_leaf_node %}
+                                        <li><a href="{{ children.get_absolute.url }}">{{ children }}</a></li>
+                                        {% endif %}
+
+                                    </ul>
+                                {% endrecursetree %}
+
                                 <div class="single-mega cn-col-4">
                                     <img src="img/bg-img/bg-6.jpg" alt="">
                                 </div>
                             </div>
-                        </li>
-                        <li><a href="#">Pages</a>
+                            <span class="dd-trigger"></span><span class="dd-arrow"></span></li>
+                        <li class="cn-dropdown-item has-down pr12"><a href="#">Pages</a>
                             <ul class="dropdown">
                                 <li><a href="index.html">Home</a></li>
                                 <li><a href="shop.html">Shop</a></li>
@@ -60,7 +50,7 @@
                                 <li><a href="regular-page.html">Regular Page</a></li>
                                 <li><a href="contact.html">Contact</a></li>
                             </ul>
-                        </li>
+                            <span class="dd-trigger"></span><span class="dd-arrow"></span></li>
                         <li><a href="blog.html">Blog</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
